# unrelyzer

./: .gitignore  .travis.yml  Makefile  README.md  configure  configure.ac  input  interval analysis.tex  parser.c  parser.h  report.tex  tokenizer.l
code/: README.md  configure  configure.ac
code/src/: Makefile  concrete.c  concrete.h  hardware_specification.h  input  input-2  input-3  input-test  limit.h  main.c  test_suit.py
code/src/argparse/: Makefile  argparse.c  argparse.h
code/src/dataflow/: Makefile  Makefile.in  avl.c  avl.h  cfg.c  cfg.h  dataflow.c  grammar.y  parser.c  parser.h  tokenizer.l
code/src/domains/: Makefile  util.c  util.h
code/src/domains/abstract/: abstract.c  abstract.h
code/src/domains/concrete/: concrete.c  concrete.h
code/src/parser/: Makefile.in  avl.c  avl.h  grammar.y  parser.c  parser.h  tokenizer.l
src/: Makefile  Makefile.in  Makefile.variables  dataflow.c  input  input-1  main.c  parser.c  parser.h  parser.y  tokenizer.l
src/argparse/: Makefile  argparse.c
src/dataflow/: Makefile.in  dataflow.c  grammar.y  parser.c  parser.h
src/domains/: Makefile  util.c  util.h
src/domains/abstract/: abstract.c  abstract.h
src/domains/concrete/: concrete.c
src/parser/: grammar.y
util/: elsarticle.cls
